fix(home): fixed page height on mobile/desktop.

--- a/client/app/common/common.scss
+++ b/client/app/common/common.scss
@@ -44,6 +44,10 @@ app {
 	width: 100%;
 	background-color: $primary;
 
+	&.full-height {
+		height: 100%;
+	}
+
 	#wrapper {
 		width: 100%;
 		height: 100%;
